--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
 <body>
 	<h1>Chat con sockets</h1>
 
+	<form action="chat.html">
+		<input type="text" name="nombre" placeholder="Nombre...">
+		<input type="text" name="sala" placeholder="Sala...">
+		<input type="submit" value="Ingresar">
+	</form>
 
 
 </body>
